adding style and title to toc

--- a/post.html
+++ b/post.html
@@ -15,8 +15,9 @@
 </head>
 <body>
     <div class="toc">
+        <h4 style="margin-bottom: 0px; padding-left: 20px;">Contents</h4>
         <ul>
-            <a href="#intro-section"><li>Intro</li></a>
+            <a href="#top"><li>Intro</li></a>
             <a href="#big-o-explained"><li>Big O Notation</li></a>
             <a href="#big-o-examples"><li>Big O Python Examples</li></a>
             <ul>
